--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,13 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        ".",
+        "./_test_",
         "-p",
-        "*_test.py"
+        "*test.py"
     ],
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true,
+    "python.testing.pytestArgs": [
+        "test"
+    ]
 }
