--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,13 @@ Flask-Session==0.5.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-numpy==1.24.3
+numpy==1.26.2
 openpyxl==3.1.2
-pandas==2.0.2
+pandas==2.1.4
 python-dateutil==2.8.2
 pytz==2023.3
 pyxlsb==1.0.10
+setuptools==65.5.0
 six==1.16.0
 tzdata==2023.3
 Werkzeug==2.3.4
