--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,5 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/flask,venv,python
+
+**/flask_session/
