--- a/BD/config.json
+++ b/BD/config.json
@@ -1,5 +1,6 @@
 {
-    "RECAUDOS": "CODIGO RECAUDO.XLSX",
+    "RECAUDOS": "RECAUDOS.XLSX",
     "PREPAGOS": "PREPAGOS.XLSX",
-    "TRABAJADORES": "TRABAJADORES.XLSX"
+    "TRABAJADORES": "TRABAJADORES.XLSX",
+    "CLIENTES": "CLIENTES.xlsx"
 }
