feat: mejoras de flujo, UI y despliegue en Vercel

--- a/BD/config.json
+++ b/BD/config.json
@@ -2,5 +2,5 @@
     "RECAUDOS": "RECAUDOS.XLSX",
     "PREPAGOS": "PREPAGOS.XLSX",
     "TRABAJADORES": "TRABAJADORES.XLSX",
-    "CLIENTES": "CLIENTES.xlsx"
+    "CLIENTES": "BASE CLIENTE ESTADO ACTUALIZADO.XLSX"
 }
