--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "bancos"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "~=3.11.0"
+requires-python = ">=3.12,<3.14"
 dependencies = [
     "blinker==1.6.2",
     "cachelib==0.9.0",
