feat: ajustar flujo asientos/clientes y simplificar pestaña correos

--- a/BD/config.json
+++ b/BD/config.json
@@ -1,6 +1,5 @@
 {
     "RECAUDOS": "RECAUDOS.XLSX",
     "PREPAGOS": "PREPAGOS.XLSX",
-    "TRABAJADORES": "TRABAJADORES.XLSX",
-    "CLIENTES": "BASE CLIENTE ESTADO ACTUALIZADO.XLSX"
+    "TRABAJADORES": "TRABAJADORES.XLSX"
 }
