feat: base de datos estática con clientes y correos persistentes paginados

--- a/BD/config.json
+++ b/BD/config.json
@@ -1,5 +1,6 @@
 {
     "RECAUDOS": "RECAUDOS.XLSX",
     "PREPAGOS": "PREPAGOS.XLSX",
-    "TRABAJADORES": "TRABAJADORES.XLSX"
+    "TRABAJADORES": "TRABAJADORES.XLSX",
+    "CLIENTES": "CLIENTES.xlsx"
 }
